  such as the session map.  
* Added support for accessing a PortletRequest.USER_INFO map as context.getUserInfoMap().
* Introduced ExternalContextHolder for setting a thread-bound ExternalContext.  Used by FlowExecutionRepository 
  implementations that need to access external state such as the sessionMap.

Package org.springframework.webflow.conversation
* Renamed ConversationService to ConversationManager.
* Added SessionBindingConversationManager for storing conversations in the session map.
* Added stateful LocalConversationManager for storing conversations in a local concurrent hash map
  with session-based expiration support.
* Fixed bug where ConversationEntry lock was not released on 'end'.
* Fixed bug where an IllegalMonitorException could occur on implicit conversation unlock on 'end'.

Package org.springframework.webflow.definition
* Introduced stable FlowDefinition abstractions, useful for reasoning on flow definition metadata 
  to support tooling and other runtime introspection.
* Relocated FlowLocator and related exception types from execution to registry subpackage.
* Renamed FlowLocator to FlowDefinitionLocator for consistency.
* Renamed FlowRegistry to FlowDefinitionRegistry for consistency.
* Renamed FlowRegistrar to FlowDefinitionRegistrar for consistency.
* Renamed ExternalizedFlowDefinition to FlowDefinitionResource for clarity.
* Reworked FlowDefinitionRegistrar interface, simplifying and decoupling it from the concept of a FlowServiceLocator.
* Removed FlowDefinitionRegistryFactoryBean as it was not used.

Package org.springframework.webflow.engine
* Introduced full support for XML schema, see builder/xml/spring-webflow.xsd
* Removed support for XML DTD, removing spring-webflow.dtd.
* Significantly enhanced in-line XML element and attribute documentation for benefit of .xsd users.
* Reworked support for "bean invoking actions".  Introduced new <bean action/> tag.